@@ -34,3 +34,4 @@ FB_START=""
 FB_DISPLAY=""
 FB_DEV=""
 FB_INPUT=""
+FB_ANDROID=""
