@@ -4,6 +4,7 @@ Changelog (English)
 1.3.7
 Added support Kali Linux
 Added ability to display GUI through framebuffer
+Added option for stop Android UI in framebuffer mode
 Fixed list of packages openSUSE installation
 Bugfix: pacman error "invalid option"
 
@@ -187,6 +188,7 @@ Updated list packages of base system installation
 1.3.7
 Добавлена поддержка Kali Linux
 Добавлена ​​возможность отображения графического интерфейса через фрейм-буфер
+Добавлена опция, позволяющая отключать графический интерфейс Android в режиме фрейм-буфера
 Исправлен список пакетов установки openSUSE
 Исправлена ошибка: pacman error "invalid option"
 
